--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -2,15 +2,22 @@
 <html lang="en">
     <%- include('../partials/head.ejs') %>
 <body>
-    <div class="page-content">
-        <%- include('../partials/header') %>
-        <%- body %>
-        <!-- place the scripts at the end of the html page -->
-        <%- include('../partials/footer') %>
-    </div>
-    
+    <%- include('../partials/nav') %>
+    <% if (showHeader) { %>
+      <%- include('../partials/header') %>
+    <% } %>
+    <!-- Main Content -->
+    <main class="main-content">
+      <%- body %>
+    </main>
+    <!-- place the scripts at the end of the html page -->
     <!-- Page Content END -->	
-    <script src="./dist/js/swiper.min.js"></script>
+
+    <%- include('../partials/footer') %>
+    <!-- Scripts -->
+    <script src="./js/page.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/swiper.min.js"></script>
     <!-- Initialize Swiper -->
     <script>
         var swiper = new Swiper('.swiper-container', {
@@ -28,12 +35,7 @@
           },
         });
      </script>
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/circle-progress.js"></script>
-    <script src="./js/examples.js"></script>
-    <script src="./js/vendor/modernizr-3.5.0.min.js"></script>
-    <!-- <script src="./js/vendor/jquery-3.2.1.min.js"></script> -->
-    <script src="./js/pluginsx.js"></script>
-    <script src="./js/main.js"></script>
+
 </body>
+
 </html>
