--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -1,70 +1,97 @@
-<section id="home-sec" class="main-banner parallax">
-    <div class="bg-lefts"></div>
-    <div class="container">
-       <div class="row">
-          <div class="col-lg-9">
-             <!-- Swiper -->
-             <div class="swiper-container">
-                <div class="swiper-wrapper">
-                   <div class="swiper-slide" data-hash="slide1">
-                      <div class="col-md-6">
-                         <span class="img-ste1"></span>
-                      </div>
-                      <div class="col-md-6">
-                         <h3 class="name-intro">Dirty Game</h3>
-                         <span class="hr-intro"></span>
-                         <p class="docopation-intro">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                            Itaque numquam officia sint, 
-                         </p>
-                         <a href="#" class="btn-drop"><span class="ic-sx22"></span> voluptas </a>
-                      </div>
-                   </div>
-                   <div class="swiper-slide" data-hash="slide2">
-                      <div class="col-md-6">
-                         <span class="img-ste1"></span>
-                      </div>
-                      <div class="col-md-6">
-                         <h3 class="name-intro">PUBG</h3>
-                         <span class="hr-intro"></span>
-                         <p class="docopation-intro">
-                            Встречайте новая мини-игра <br>
-                            PUBG теперь и в майнкрафте.
-                         </p>
-                         <a href="#" class="btn-drop"><span class="ic-sx22"></span> Подробнее</a>
-                      </div>
-                   </div>
-                   <div class="swiper-slide" data-hash="slide3">
-                      <div class="col-md-6">
-                         <span class="img-ste1"></span>
-                      </div>
-                      <div class="col-md-6">
-                         <h3 class="name-intro">PUBG</h3>
-                         <span class="hr-intro"></span>
-                         <p class="docopation-intro">
-                            Встречайте новая мини-игра <br>
-                            PUBG теперь и в майнкрафте.
-                         </p>
-                         <a href="#" class="btn-drop"><span class="ic-sx22"></span> Подробнее</a>
-                      </div>
-                   </div>
-                </div>
-                <!-- Add Pagination -->
-                <div class="swiper-pagination"></div>
-                <!-- Add Arrows -->
+<section class="section bg-gray p-0">
+   <div class="container">
+     <div class="row">
+       <div class="col-xs-12 col-md-10 col-xl-8 mx-auto">
+
+         <div class="card hover-shadow-7 my-8">
+           <div class="row">
+             <div class="col-md-4">
+               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
              </div>
-          </div>
-          <div class="col-lg-3">
-             <a href="/how-start.html" class="block-s1">
-                <p class="how-to-games">Getting Started ?</p>
-                <p class="desctops"> В данной теме рассказано как нчать игру на нашем проекте.</p>
-             </a>
-             <a href="#" class="block-s1 p2">
-                <p class="how-to-games">Сontact Us</p>
-                <p class="desctops"> В данном разделе вы можете купить модераторку за 900р.</p>
-             </a>
-          </div>
+
+             <div class="col-md-8">
+               <div class="p-7">
+                 <h4>We relocated our office to a new designed garage</h4>
+                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+               </div>
+             </div>
+           </div>
+         </div>
+
+         <div class="card hover-shadow-7 my-8">
+           <div class="row">
+            <div class="col-md-4">
+              <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+            </div>
+
+             <div class="col-md-8">
+               <div class="p-7">
+                 <h4>Top 5 brilliant content marketing strategies</h4>
+                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+               </div>
+             </div>
+           </div>
+         </div>
+
+
+         <div class="card hover-shadow-7 my-8">
+           <div class="row">
+            <div class="col-md-4">
+              <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+            </div>
+
+             <div class="col-md-8">
+               <div class="p-7">
+                 <h4>Best practices for minimalist design with example</h4>
+                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+               </div>
+             </div>
+           </div>
+         </div>
+
+
+         <div class="card hover-shadow-7 my-8">
+           <div class="row">
+            <div class="col-md-4">
+              <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+            </div>
+
+             <div class="col-md-8">
+               <div class="p-7">
+                 <h4>Congratulate and thank to Maryam for joining our team</h4>
+                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                 <a class="small ls-1" href="blog-single.html">Read More <span class="pl-1">&xrarr;</span></a>
+               </div>
+             </div>
+           </div>
+         </div>
+
+
+         <div class="card hover-shadow-7 my-8">
+           <div class="row">
+            <div class="col-md-4">
+              <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+            </div>
+
+             <div class="col-md-8">
+               <div class="p-7">
+                 <h4>New published books to read by a product designer</h4>
+                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+               </div>
+             </div>
+           </div>
+         </div>
+
+         <nav class="flexbox my-8">
+           <a class="btn btn-white disabled"><i class="ti-arrow-left fs-9 mr-2"></i> Newer</a>
+           <a class="btn btn-white" href="#">Older <i class="ti-arrow-right fs-9 ml-2"></i></a>
+         </nav>
+
        </div>
-    </div>
+     </div>
+   </div>
 </section>
-<script src="./js/customs/home.js"></script>
