--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,24 +1,29 @@
-<!-- Footer START -->
-<footer class="section site-footer bg-dark">
-<div class="container">
-    <div class="row">
-        <div class="col-lg-2 col-md-2">
-            <img class="logo-img my-3" src="./img/logo-ft.png" alt="LOGO">
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="container">
+          <div class="row gap-y align-items-center">
+
+            <div class="col-md-3 text-center text-md-left">
+              <a href="#"><img src="../img/logo-dark.png" alt="logo"></a>
+            </div>
+
+            <div class="col-md-6">
+              <div class="nav nav-bold nav-uppercase nav-center">
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="#">Policy</a>
+                <a class="nav-link" href="#">Contact</a>
+              </div>
+            </div>
+
+            <div class="col-md-3 text-center text-md-right">
+              <div class="social social-sm social-hover-bg-brand">
+                <a class="social-facebook" href="#"><i class="fa fa-facebook"></i></a>
+                <a class="social-twitter" href="https://twitter.com/chuckymagic"><i class="fa fa-twitter"></i></a>
+                <a class="social-instagram" href="https://instagram.com/chuckymagic"><i class="fa fa-instagram"></i></a>
+              </div>
+            </div>
+
+          </div>
         </div>
-        <div class="col-lg-6 col-md-6 text-center">
-            <p class="footer-text">© ChuckyMagic 2022 - Games For Fun.</p>
-        </div>
-        <div class="col-md-4">
-            <ul class="ft-nav social-nav my-3">
-            <li class="mx-1"><a href="javascript:void(0);" title="vk"><i class="fa fa-vk"></i></a></li>
-            <li class="mx-1"><a href="javascript:void(0);" title="twitter"><i class="fa fa-twitter"></i></a></li>
-            <li class="mx-1"><a href="javascript:void(0);" title="facebook"><i class="fa fa-facebook"></i></a></li>
-            <li class="mx-1"><a href="javascript:void(0);" title="instagram"><i class="fa fa-instagram"></i></a></li>
-            </ul>
-            <a href="http://larts.pro/">
-                <span class="corp-design"></span>
-            </a>
-        </div>
-    </div>
-</div>
-</footer>
+      </footer><!-- /.footer -->
