--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,39 +1,75 @@
-
-<!-- Main Nav START -->
-<nav id="main-nav" class="main-nav fixed">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="nav-header d-flex justify-content-between align-items-center">
-                <a href="/" class="logo" title="LOGO">
-                <img class="logo-img" src="./img/logo.png" alt="LOGO">
-                <img class="alt-logo-img" src="./img/logo-alt.png" alt="LOGO">
-                </a>
+<header class="header mb-9" style="background-image: url(/img/bg/bg-left.png)">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-8 col-xl-9 mx-auto">
+        <div class="slider-arrows-circle-light px-8" data-provide="slider" data-arrows="true">
+          <div class="card hover-shadow-1 my-8">
+            <div class="row">
+             <div class="col-md-4">
+               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+             </div>
+ 
+              <div class="col-md-8">
+                <div class="p-2">
+                  <h4>New published books to read by a product designer</h4>
+                  <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                  <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
                 </div>
-                <div class="nav-wrap">
-                <ul id="nav" class="nav-wrap__list menu">
-                    <li class="current"><a href="/" title="Главная">Home</a></li>
-                    <li><a href="/about" title="Проекте">О About</a></li>
-                    <div class="dropdown">
-                        <span>
-                            <div class="drop-ed"></div>
-                        </span>
-                        <div class="dropdown-content">
-                            <span class="arrow_box"></span>
-                            <ul class="drop-vape">
-                            <li><a href="#">Some Thing</a></li>
-                            <li><a href="#">Some Thing</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </ul>
-                <div class="riglt-floats-xs">
-                    <a href="#" class="btn-login"><span class="ic-sx21"></span> Login / Register</a>
-                    <a href="#" class="btn-startgames"><span class="ic-sx22"></span> Contact</a>
-                </div>
-                </div>
+              </div>
             </div>
+          </div>
+          <div class="card hover-shadow-1 my-8">
+            <div class="row">
+             <div class="col-md-4">
+               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+             </div>
+ 
+              <div class="col-md-8">
+                <div class="p-2">
+                  <h4>New published books to read by a product designer</h4>
+                  <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                  <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card hover-shadow-1 my-8">
+            <div class="row">
+             <div class="col-md-4">
+               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+             </div>
+ 
+              <div class="col-md-8">
+                <div class="p-2">
+                  <h4>New published books to read by a product designer</h4>
+                  <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                  <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="col-xs-12 col-md-4 col-xl-3 mx-auto align-items-center">
+        <a href="/">
+          <div class="card shadow-4" style="background-image: url(/img/block-1s.png)">
+            <div class="card-body">
+                <h5 class="card-title text-md-right text-dark">Getting Started ?</h5>
+                <p class="text-right small text-dark">How to play my games</p>
+            </div>
+          </div>
+        </a>
+        <br/>
+        <a href="#">
+          <div class="card shadow-4" style="background-image: url(/img/block-2s.png)">
+            <div class="card-body">
+                <h5 class="card-title text-md-right text-dark">Сontact Us</h5>
+                <p class="text-right small text-dark">Say Hello To the Developer</p>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
-</nav>
-<!-- Main Nav END -->
+  </div>
+</header><!-- /.header -->
