--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -25,6 +25,6 @@
     <meta property="og:title" content="chuckymagic">
     <meta property="og:description" content="A Unity and C# Gaming App Portfolio powered by Node Typescript Express and EJS.">
     <meta property="og:image" content="https://thetheme.io/thesaas/assets/img/og-img.jpg">
-    <meta property="og:url" content="https://chuckymagic.com/thesaas/">
+    <meta property="og:url" content="https://chuckymagic.com/">
     <meta name="twitter:card" content="summary_large_image">
   </head>
