--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,43 +1,45 @@
-<header class="header mb-9" style="background-image: url(/img/bg/bg-left.png)">
+<header class="header mb-9" style="background-image: url(/img/bg/bg-left.png)" data-overlay="6">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-8 col-xl-9 mx-auto">
+      <div class="col-xs-12 col-md-8 col-xl-8 mx-auto align-items-center">
         <div class="slider-arrows-circle-light px-8" data-provide="slider" data-arrows="true">
           <div class="card hover-shadow-1 my-8">
             <div class="row">
              <div class="col-md-4">
                <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
              </div>
- 
+
               <div class="col-md-8">
                 <div class="p-2">
-                  <h4>New published books to read by a product designer</h4>
-                  <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
-                  <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+                  <h4>Tile Vania</h4>
+                  <p>2d Platformer game built with unity.</p>
+                  <a class="small ls-1" href="/tilevania">Play Here <span class="pl-1">&xrarr;</span></a>
                 </div>
               </div>
+
             </div>
           </div>
           <div class="card hover-shadow-1 my-8">
             <div class="row">
-             <div class="col-md-4">
-               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
-             </div>
+              <div class="col-md-4">
+                <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+              </div>
  
               <div class="col-md-8">
                 <div class="p-2">
-                  <h4>New published books to read by a product designer</h4>
-                  <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
-                  <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+                  <h4>Laser Defender</h4>
+                  <p>Play Laser Defender and protect the galaxy.</p>
+                  <a class="small ls-1" href="/laserdefender">Read More <span class="pl-1">&xrarr;</span></a>
                 </div>
               </div>
+
             </div>
           </div>
           <div class="card hover-shadow-1 my-8">
             <div class="row">
-             <div class="col-md-4">
-               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
-             </div>
+              <div class="col-md-4">
+                <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+              </div>
  
               <div class="col-md-8">
                 <div class="p-2">
@@ -51,7 +53,7 @@
         </div>
       </div>
 
-      <div class="col-xs-12 col-md-4 col-xl-3 mx-auto align-items-center">
+      <div class="col-xs-12 col-md-4 col-xl-4 mx-auto align-items-center">
         <a href="/">
           <div class="card shadow-4" style="background-image: url(/img/block-1s.png)">
             <div class="card-body">
