--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -1,97 +1,64 @@
+<main class="main-content">
 <section class="section bg-gray p-0">
-   <div class="container">
-     <div class="row">
-       <div class="col-xs-12 col-md-10 col-xl-8 mx-auto">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-10 col-xl-8 mx-auto">
 
-         <div class="card hover-shadow-7 my-8">
-           <div class="row">
-             <div class="col-md-4">
-               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
-             </div>
+          <div class="card hover-shadow-7 my-8">
+            <div class="row">
+              <div class="col-md-4">
+                <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+              </div>
 
-             <div class="col-md-8">
-               <div class="p-7">
-                 <h4>We relocated our office to a new designed garage</h4>
-                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
-                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
-               </div>
-             </div>
-           </div>
-         </div>
+              <div class="col-md-8">
+                <div class="p-7">
+                  <h4>TileVania</h4>
+                  <p>F2P 2D Game created with Unity.</p>
+                  <a class="small ls-1" href="/tilevania">Play Here <span class="pl-1">&xrarr;</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
-         <div class="card hover-shadow-7 my-8">
-           <div class="row">
+          <div class="card hover-shadow-7 my-8">
+          <div class="row">
             <div class="col-md-4">
               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
             </div>
 
-             <div class="col-md-8">
-               <div class="p-7">
-                 <h4>Top 5 brilliant content marketing strategies</h4>
-                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
-                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
-               </div>
-             </div>
-           </div>
-         </div>
+            <div class="col-md-8">
+              <div class="p-7">
+                <h4>Laser Defender</h4>
+                <p>Play Laser Defender and protect the galaxy.</p>
+                <a class="small ls-1" href="/laserdefender">Play Here <span class="pl-1">&xrarr;</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
-
-         <div class="card hover-shadow-7 my-8">
-           <div class="row">
+          <div class="card hover-shadow-7 my-8">
+            <div class="row">
             <div class="col-md-4">
               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
             </div>
 
-             <div class="col-md-8">
-               <div class="p-7">
-                 <h4>Best practices for minimalist design with example</h4>
-                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
-                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
-               </div>
-             </div>
-           </div>
-         </div>
-
-
-         <div class="card hover-shadow-7 my-8">
-           <div class="row">
-            <div class="col-md-4">
-              <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+              <div class="col-md-8">
+                <div class="p-7">
+                  <h4>Top 5 brilliant content marketing strategies</h4>
+                  <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
+                  <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
+                </div>
+              </div>
             </div>
+          </div>
 
-             <div class="col-md-8">
-               <div class="p-7">
-                 <h4>Congratulate and thank to Maryam for joining our team</h4>
-                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
-                 <a class="small ls-1" href="blog-single.html">Read More <span class="pl-1">&xrarr;</span></a>
-               </div>
-             </div>
-           </div>
-         </div>
+          <nav class="flexbox my-8">
+            <a class="btn btn-white disabled"><i class="ti-arrow-left fs-9 mr-2"></i> Newer</a>
+            <a class="btn btn-white" href="#">Older <i class="ti-arrow-right fs-9 ml-2"></i></a>
+          </nav>
 
-
-         <div class="card hover-shadow-7 my-8">
-           <div class="row">
-            <div class="col-md-4">
-              <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
-            </div>
-
-             <div class="col-md-8">
-               <div class="p-7">
-                 <h4>New published books to read by a product designer</h4>
-                 <p>Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
-                 <a class="small ls-1" href="/">Read More <span class="pl-1">&xrarr;</span></a>
-               </div>
-             </div>
-           </div>
-         </div>
-
-         <nav class="flexbox my-8">
-           <a class="btn btn-white disabled"><i class="ti-arrow-left fs-9 mr-2"></i> Newer</a>
-           <a class="btn btn-white" href="#">Older <i class="ti-arrow-right fs-9 ml-2"></i></a>
-         </nav>
-
-       </div>
-     </div>
-   </div>
+        </div>
+      </div>
+    </div>
 </section>
+</main>
