--- a/src/views/pages/tilevania.ejs
+++ b/src/views/pages/tilevania.ejs
@@ -1,4 +1,4 @@
-<div id="unity-container" class="unity-desktop">
+  <div id="unity-container" class="unity-desktop">
     <canvas id="unity-canvas" width=960 height=600></canvas>
     <div id="unity-loading-bar">
       <div id="unity-logo"></div>
@@ -10,7 +10,7 @@
     <div id="unity-footer">
       <div id="unity-webgl-logo"></div>
       <div id="unity-fullscreen-button"></div>
-      <div id="unity-build-title">TileVaniaSample</div>
+      <div id="unity-build-title">TileVania</div>
     </div>
   </div>
   <script>
