--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -6,7 +6,7 @@
   
       <div class="navbar-left">
         <button class="navbar-toggler" type="button">☰</button>
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img class="logo-dark" src="./img/logo-dark.png" alt="logo">
           <img class="logo-light" src="./img/logo-light.png" alt="logo">
         </a>
@@ -14,9 +14,9 @@
   
       <section class="navbar-mobile">
         <nav class="nav nav-navbar ml-auto">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link active" href="/">Home</a>
+          <a class="nav-link" href="/games">Games</a>
+          <a class="nav-link" href="/about">About</a>
           <a class="nav-link" href="#">Contact</a>
         </nav>
       </section>
