--- a/src/views/pages/games.ejs
+++ b/src/views/pages/games.ejs
@@ -1,5 +1,5 @@
 <main class="main-content">
-  <section class="section bg-gray p-0">
+  <section class="section bg-gray p-0" style="background-image: url(/img/bg/bg-left.png)" data-overlay="6">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-10 col-xl-8 mx-auto">
