--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -14,11 +14,10 @@
   
       <section class="navbar-mobile">
         <nav class="nav nav-navbar ml-auto">
-          
           <a class="nav-link <%= name==='home' ? 'active' : ''  %>" href="/">Home</a>
           <a class="nav-link <%= name==='games' ? 'active' : ''  %>" href="/games">Games</a>
           <a class="nav-link <%= name==='about' ? 'active' : ''  %>" href="/about">About</a>
-          <a class="nav-link <%= name==='home' ? 'active' : ''  %>" href="#">Contact</a>
+          <a class="nav-link <%= name==='contact' ? 'active' : ''  %>" href="#">Contact</a>
         </nav>
       </section>
     </div>
