added images for games and logo

--- a/src/views/pages/games.ejs
+++ b/src/views/pages/games.ejs
@@ -7,7 +7,7 @@
             <div class="card hover-shadow-7 my-8">
               <div class="row">
                 <div class="col-md-4">
-                  <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+                  <a href="/"><img src="./img/game/tilevania.png" alt="..."></a>
                 </div>
 
                 <div class="col-md-8">
@@ -23,7 +23,7 @@
             <div class="card hover-shadow-7 my-8">
             <div class="row">
               <div class="col-md-4">
-                <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+                <a href="/"><img src="./img/game/laserdefender.png" alt="..."></a>
               </div>
 
               <div class="col-md-8">
