--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -7,8 +7,8 @@
       <div class="navbar-left">
         <button class="navbar-toggler" type="button">☰</button>
         <a class="navbar-brand" href="/">
-          <img class="logo-dark" src="./img/logo-dark.png" alt="logo">
-          <img class="logo-light" src="./img/logo-light.png" alt="logo">
+          <img class="logo-dark" src="./img/logo/yenum-logo-main.png" alt="logo">
+          <img class="logo-light" src="./img/logo/yenum-logo-main.png" alt="logo">
         </a>
       </div>
   
