--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -24,7 +24,7 @@
     <!--  Open Graph Tags -->
     <meta property="og:title" content="chuckymagic">
     <meta property="og:description" content="A Unity and C# Gaming App Portfolio powered by Node Typescript Express and EJS.">
-    <meta property="og:image" content="https://thetheme.io/thesaas/assets/img/og-img.jpg">
+    <meta property="og:image" content="./img/logo/yenumcomlight">
     <meta property="og:url" content="https://chuckymagic.com/">
     <meta name="twitter:card" content="summary_large_image">
   </head>
