--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<header class="header mb-9" style="background-image: url(/img/bg/bg-left.png)" data-overlay="6">
+<header class="header mb-9" style="background-image: url(/img/bg/12.jpg)" data-overlay="6">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-8 col-xl-8 mx-auto align-items-center">
@@ -6,7 +6,7 @@
           <div class="card hover-shadow-1 my-8">
             <div class="row">
              <div class="col-md-4">
-               <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+               <a href="/"><img src="./img/game/tilevania.png" alt="..."></a>
              </div>
 
               <div class="col-md-8">
@@ -22,7 +22,7 @@
           <div class="card hover-shadow-1 my-8">
             <div class="row">
               <div class="col-md-4">
-                <a href="/"><img src="./img/img-ste1.png" alt="..."></a>
+                <a href="/"><img src="./img/game/laserdefender.png" alt="..."></a>
               </div>
  
               <div class="col-md-8">
@@ -40,7 +40,7 @@
 
       <div class="col-xs-12 col-md-4 col-xl-4 mx-auto align-items-center">
         <a href="/">
-          <div class="card shadow-4" style="background-image: url(/img/block-1s.png)">
+          <div class="card shadow-4" style="background-image: url(/img/block-1s.png);background-repeat: no-repeat;background-size: contain;">
             <div class="card-body">
                 <h5 class="card-title text-md-right text-dark">Getting Started ?</h5>
                 <p class="text-right small text-dark">How to play my games</p>
@@ -49,7 +49,7 @@
         </a>
         <br/>
         <a href="#">
-          <div class="card shadow-4" style="background-image: url(/img/block-2s.png)">
+          <div class="card shadow-4" style="background-image: url(/img/block-2s.png);background-repeat: no-repeat;background-size: contain;">
             <div class="card-body">
                 <h5 class="card-title text-md-right text-dark">Сontact Us</h5>
                 <p class="text-right small text-dark">Say Hello To the Developer</p>
