--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -48,10 +48,10 @@
           </div>
         </a>
         <br/>
-        <a href="#">
+        <a href="http://yenum.dev/#contact" target="_blank">
           <div class="card shadow-4" style="background-image: url(/img/block-2s.png);background-repeat: no-repeat;background-size: contain;">
             <div class="card-body">
-                <h5 class="card-title text-md-right text-dark">Сontact Us</h5>
+                <h5 class="card-title text-md-right text-dark">Сontact Yenum</h5>
                 <p class="text-right small text-dark">Say Hello To the Developer</p>
             </div>
           </div>
