--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -4,7 +4,7 @@
           <div class="row gap-y align-items-center">
 
             <div class="col-md-3 text-center text-md-left">
-              <a href="#"><img src="../img/logo-dark.png" alt="logo"></a>
+              <a href="#"><img src="../img/logo/yenum-logo-main.png" alt="logo"></a>
             </div>
 
             <div class="col-md-6">
